force-app/main/default/objects/Performance_Table__c/Performance_Table__c.object-meta.xml
<CustomObject>
    <label>Performance Table</label>
    <nameField>
        <label>Performance Table Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Performance Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>