force-app/main/default/objects/Performance_Table__c/fields/Datasheet_Name__c.field-meta.xml
<CustomField>
    <fullName>Datasheet_Name__c</fullName>
    <label>Datasheet Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>