force-app/main/default/objects/Performance_Table__c/fields/E_ptc__c.field-meta.xml
<CustomField>
    <fullName>E_ptc__c</fullName>
    <label>E_ptc</label>
    <precision>17</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>