force-app/main/default/objects/Performance_Table__c/fields/P_ds__c.field-meta.xml
<CustomField>
    <fullName>P_ds__c</fullName>
    <label>P_ds</label>
    <precision>17</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>