force-app/main/default/objects/Performance_Table__c/fields/Table_ID__c.field-meta.xml
<CustomField>
    <fullName>Table_ID__c</fullName>
    <displayFormat>PT-{0000}</displayFormat>
    <label>Table ID</label>
    <type>AutoNumber</type>
</CustomField>