force-app/main/default/objects/Performance_Table__c/fields/Table_URL__c.field-meta.xml
<CustomField>
    <fullName>Table_URL__c</fullName>
    <label>Table URL</label>
    <type>Url</type>
</CustomField>