force-app/main/default/objects/Performance_Table__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Datasheet_Name__c</columns>
    <columns>Revision__c</columns>
    <columns>Table_URL__c</columns>
    <columns>P_ds__c</columns>
    <columns>E_ds__c</columns>
    <columns>E_ptc__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>